public/stylesheets/application.css
/* ... */
.container li{
	display: inline;
	margin: 0px;
	padding:0px;
	background: #fff;
}
.contentInnerWrapper{
	text-align: justify;
	padding: 10px 10px 0 40px;
}
/* Handle*/
.handle{
	float: left;
	width: 30px;
	height: 400px;
}
#accordionHandle0 {
  background: #fff url('../images/haccordion_bars3.png') 0px 0px no-repeat;
}
#accordionHandle0:hover {
  background: #fff url('../images/haccordion_bars3.png') 0px -500px no-repeat;
}
#accordionHandle0.active {
  background: #fff url('../images/haccordion_bars3.png') 0px -3000px no-repeat;
}
#accordionHandle1 {
  background: #fff url('../images/haccordion_bars3.png') 0px -1000px no-repeat;
}
#accordionHandle1:hover {
  background: #fff url('../images/haccordion_bars3.png') 0px -1500px no-repeat;
}
#accordionHandle1.active {
  background: #fff url('../images/haccordion_bars3.png') 0px -3000px no-repeat;
}
#accordionHandle2 {
  background: #fff url('../images/haccordion_bars3.png') 0px -2000px no-repeat;
}
#accordionHandle2:hover {
  background: #fff url('../images/haccordion_bars3.png') 0px -2500px no-repeat;
}
#accordionHandle2.active {
  background: #fff url('../images/haccordion_bars3.png') 0px -3000px no-repeat;
}
.handleOver{
}
.handleSelected{
}
.active {
  background: #fff;
}

/*********************************************/
/******************SUBBOXES*******************/
#sub_boxes {
  height: 125px;
  text-align: left;
  background: #fff;
}
.sub_box3, .middle{
  width: 300px;
  margin: 10px;
  float: left;
  text-align: center;
}
.middle {
  margin-left: 0px;
  margin-right: 0px;
}
#sub_box1 {
  margin-left: 10px;
}
.sub_box {
  min-height: 200px;
  margin-left: 10px;
}
.cover_flow_sub_box {
  width: 400px;
  height: 158px;
  margin-left: 10px;
  margin-top: 12px;
  float: left;
}
.inner_sub_box {
  margin-left: 10px;
  width: 200px;
  min-height: 200px;
}
.inner_sub_box p {
  position: relative;
  margin: 5px;
}
.sub_box_header {
  margin: 10px;
}
.sub_box_wrap {
  width: 200px;
  margin-left: 32px;
  float: left;
  display: inline;
}
.sub_box a.social_icon {
  display: block;
  text-indent: -1000em;
}
.sub_box p {
  color: #fff;
  width: 185px;
}
.sub_box, .sub_box2 {
  min-height: 240px;
  float:left;
}
.go_link {
  margin-top: 10px;
  margin-right: 32px;
}
/*********************************************/
/******************VIDEOS*********************/
#home_player {
  width: 340px;
  height: 300px;
}
/*********************************************/
/******************FORMS**********************/
.form_section {
  margin-bottom: 20px;
}
input[type="select"] {
  width: 100px;
}
input#ticket_date_select {
  width: 85px;
}
/*********************************************/
/******************BUTTONS********************/
.btn {
  background: #666 url('../images/healthcare_fraud_btn_black.png') bottom left repeat-x;
  padding: 5px; 
  color: #fff;
  border: 1px solid #666; 
  text-decoration: none; 
  cursor: pointer; 
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  margin: 10px 10px 10px 0px;
  min-height: 18px;
  float: left;
}
.btn:hover {
  background: #67ab89;
}
.search_btn {
  text-indent: -1000em;
  width: 25px;
  height: 30px;
  background: url('../images/search_icon_black.png') no-repeat;
  border: none;
  cursor: pointer;
  font-size: 0px;
  display: inline-block;
}
.buttons_right {
  float: right;
  text-align: right;
  width: 200px;
}
.ticket_dashboard {
  margin-top: 15px;
}
/*********************************************/
/******************TICKETS*******************/
.ticket_list li {
  margin: 5px 0px;
}
.critical {
  color: red;
}
.urgent {
  color: #ff5500;
}
.high {
  color: #ffdd33;
}
.normal {
  color: #00b200;
}
.low {
  color: #19c0ec;
}
.lowest {
  color: #00467F;
}
.open {
  padding: 3px;
  background: #19c0ec;
  color: #fff;
}
.in_progress {
  padding: 3px;
  background: #ffff00;
  color: #000;
}
.delayed {
  padding: 3px;
  background: #4c7f99;
  color: #fff;
}
.complete {
  padding: 3px;
  background: #00b200;
  color: #fff;
}
.closed {
  padding: 3px;
  background: #0076b2;
  color: #fff;
}


/*********************************************/
/******************FOOTER********************/
#ft {
  background: #000;
}
#footer_wrap {
  min-height: 254px;
  background: url('../images/footer_ribbon.png') 0px 225px no-repeat;
}
#footer_links {
  margin: 10px;
  width: 54%;
  height: 50%;
  float: right;
}
#footer_links a, #employee_login a {
  color: #777;
  text-decoration: none;
}
#footer_links a:hover, #employee_login a:hover {
  color: #fff;
  text-decoration: underline;
}
#footer_links ul {
  float: left;
  margin: 0px 54px 0px 0px;
}
#footer_links li {
  list-style: disc;
}
#footer_links h4 {
  margin-left: -31px;
  margin-bottom: 5px;
  color: #fff;
}
#footer_logo {
  position: absolute;
  bottom: 45px;
  background: #000 url('../images/HCI_white_footer_logo.png') 10px 0px no-repeat;
  width: 100%;
  height: 40px;
}
ul#social_links {
  position: relative;
  float: right;
  height: 30px;
  margin-top: 10px;
}
ul#social_links li, ul#social_links li.top_nav_wide {
  display: block;
  float: left;
  width: 35px;
  text-align: center;
}
ul#social_links li.top_nav_wide {
  width: 100px;
}
ul#social_links li a {
  display: block;
  float: left;
  width: 30px;
  height: 30px;
  text-indent:-3000em;
  text-decoration: none;
  margin: 0px 5px;
  color: #e3e3e3;
}
ul#social_links li a.black {
  color: #000;
}
ul#social_links li a.white {
  color: white;
}
#facebook_link {
  background:  url('../images/social_icons/facebook.png') no-repeat;
}
#twitter_link {
  background:  url('../images/social_icons/twitter.png') no-repeat;
}
#youtube_link {
  background:  url('../images/social_icons/youtube.png') no-repeat;
}
#linkedin_link {
  background:  url('../images/social_icons/linked_in.png') no-repeat;
}
#footer_stripe {
  position: absolute;
  bottom: 30px;
  min-height: 7px;
  background: #fff;
}
#employee_login {
  position: absolute;
  bottom: 25px;
  right: 25px;
}
/* ... */

